namespace HMS.Models.Accomodation
{
    public class Hotel
    {
    }
}
