namespace HMS.Models.Accomodation
{
    public class Room
    {
    }
}
