namespace HMS.Models.Accomodation
{
    public class RoomType
    {
    }
}
