namespace HMS.Models.Payment
{
    public class Invoice
    {
    }
}
