namespace HMS.Models.Organisation
{
    public class Department
    {
    }
}
