namespace HMS.Models.Services
{
    public class Booking
    {
    }
}
